--- a/mvvmarch/build.gradle
+++ b/mvvmarch/build.gradle
@@ -37,5 +37,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     provided "android.arch.lifecycle:extensions:1.1.0"
     provided 'com.google.dagger:dagger:2.14.1'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
+//    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
 }
