--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,5 @@ dependencies {
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
     compile 'io.reactivex.rxjava2:rxjava:2.1.8'
 
-    kapt 'com.android.databinding:compiler:3.0.1'
+//    kapt 'com.android.databinding:compiler:3.0.1'
 }
