--- a/mvvmarch/build.gradle
+++ b/mvvmarch/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    provided "android.arch.lifecycle:extensions:1.1.0"
-    provided 'com.google.dagger:dagger:2.14.1'
+    compileOnly "android.arch.lifecycle:extensions:1.1.0"
+    compileOnly 'com.google.dagger:dagger:2.14.1'
 //    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
 }
