--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,9 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation "org.jetbrains.anko:anko-common:0.8.2"
+    implementation 'org.jetbrains.anko:anko-common:0.8.2'
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -41,12 +41,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation project(path: ':mvvmarch')
-
-    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation 'android.arch.lifecycle:extensions:1.1.0'
     implementation 'com.google.dagger:dagger:2.14.1'
-//    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
+    //    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
     kapt "com.google.dagger:dagger-compiler:2.14.1"
-
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.google.code.gson:gson:2.8.2'
@@ -60,6 +58,6 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
     implementation 'com.kingja.loadsir:loadsir:1.3.5'
-
-//    kapt 'com.android.databinding:compiler:3.0.1'
+    //    kapt 'com.android.databinding:compiler:3.0.1'
+    implementation project(':avoidonresult')
 }
