--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,12 @@
     package="io.github.anotherjack.mvvmarchdemo">
 
     <application
+        android:name=".app.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name="io.github.anotherjack.mvvmarchdemo.app.MyApp"
         android:theme="@style/AppTheme">
         <activity android:name=".mvvm.view.activity.UserActivity">
             <intent-filter>
@@ -17,6 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".mvvm.view.activity.HobbyActivity"></activity>
     </application>
 
 </manifest>
